# eomt

./: .gitignore  README.md  all_metrics.py  inference.ipynb  inference.py  inference_sr.ipynb  inference_test.ipynb  main.py  metrics.py  metrics_handlers.py  metrics_ops.py  pixi.toml  pyproject.toml  requirements.txt  wandb_img_cleanup.py  wandb_iou.py
configs/ade20k/semantic/: coat.yaml  convvit.yaml  efficient_net.yaml  efficientmod.yaml  focal.yaml  hydra.yaml  linformer.yaml  next_vit.yaml  swin.yaml  switch.yaml  synthfr.yaml  vit.yaml
configs/dinov3/sr/: eomt_large_640.yaml  sr_finetune_coolblue_instance_640.yaml
datasets/: coco_instance.py  coolblue_instance.py  sr_instance.py
eomt/models/: eomt.py
eomt/training/: lightning_module.py  mask_classification_instance.py  mask_classification_panoptic.py  mask_classification_semantic.py
model_zoo/: dinov2.md
models/: coat.py  convViT.py  cross_attention.py  efficient_net.py  efficientmod.py  eomt.py  focalnet.py  hydra.py  linformer.py  next_vit.py  swin.py  switch.py  synthFR.py  vit.py
models/backbones/: __init__.py  coat.py  convViT.py  efficient_net.py  efficientmod.py  focalnet.py  hivit.py  hydra.py  linformer.py  mixer.py  next_vit.py  nystrom.py  poly_sa.py  rest.py  swin.py  switch.py  synthFR.py  utils.py  wave.py
training/: lightning_module.py  mask_classification_instance.py  mask_classification_semantic.py
